--- a/test_page/10_page.html
+++ b/test_page/10_page.html
@@ -45,7 +45,7 @@
         <p>ESTP</p>
       </div>
       <div id="resultImg" class="col-lg-6 col-md-6 col-sm-6 col-12 mx-auto mt-5">
-        <img src="../img/image-10.png" alt="" class="img-fluid">
+        <img src="../iloveimg-compressed-2/10.png" alt="" class="img-fluid">
       </div>
       <div class="resultDesc">
         <p>
