--- a/test_page/6_page.html
+++ b/test_page/6_page.html
@@ -44,7 +44,7 @@
         <p>INTP</p>
       </div>
       <div id="resultImg" class="col-lg-6 col-md-6 col-sm-6 col-12 mx-auto mt-5">
-        <img src="../img/image-6.png" alt="" class="img-fluid">
+        <img src="../iloveimg-compressed-2/6.png" alt="" class="img-fluid">
       </div>
       <div class="resultDesc">
         <p>
