--- a/test_page/10_page.html
+++ b/test_page/10_page.html
@@ -35,25 +35,25 @@
   <div class="container">
     <header class="col-lg-6 col-md-6 col-sm-6 col-12 mx-auto mt-5" style="text-align: center;">
       <span onclick="location.href='https://doosiltest.netlify.app/'" style="cursor: pointer;">
-        인테리어 취향찾기 테스트
+        라이프스타일 취향찾기 테스트
       </span>
     </header>
     <!--결과페이지-->
     <section id="shareresult" class="mx-auto my-5 py-5 px-3">
       <h1>당신의 결과는?</h1>
       <div class="resultname">
-        <p>ESTP</p>
+        <p>ISFP</p>
       </div>
       <div id="resultImg" class="col-lg-6 col-md-6 col-sm-6 col-12 mx-auto mt-5">
         <img src="../img/10.png" alt="" class="img-fluid">
       </div>
       <div class="resultDesc">
         <p>
-          <br>열정적으로 도전하는<br><br>
+          <br>예술을 통해 감정을 표현하는<br><br>
           <span style="font-size:1.3rem; font-weight: 400;">✨ 당신에게 추천하는 스토리카드 ✨</span><br><div style="width:100%; height:0.1rem; background-color:#fff;"></div><br>
-          <a target="_blank" href="https://doosil.com/toad/search/search?q=%ED%9C%B4%EC%8B%9D%EC%9D%98%EB%B0%A9%EB%B2%95&t=tagview&tagId=652#utm_source=style_test&utm_medium=cpc&utm_campaign=style_test&utm_id=style_test" style="text-decoration: none; color:#fff; white-space: nowrap; font-weight: 400;">#휴식의방법</a>
-          <a target="_blank" href="https://doosil.com/toad/search/search?q=%EC%9D%B8%EC%83%9D%EA%B8%B0%ED%98%B8%EC%8B%9D%ED%92%88&t=tagview&tagId=660#utm_source=style_test&utm_medium=cpc&utm_campaign=style_test&utm_id=style_test" style="text-decoration: none; color:#fff; white-space: nowrap; font-weight: 400;">#인생기호식품</a>
-          <a target="_blank" href="https://doosil.com/toad/search/search?q=%EC%95%84%ED%8A%B8%ED%8E%98%EC%96%B4&t=tagview&tagId=609#utm_source=style_test&utm_medium=cpc&utm_campaign=style_test&utm_id=style_test" style="text-decoration: none; color:#fff; white-space: nowrap; font-weight: 400;">#아트페어</a>
+          <a target="_blank" href="https://doosil.com/toad/search/search?q=%EC%96%B4%EB%A5%B8%EC%95%84%EC%9D%B4&t=tagview&tagId=599#utm_source=style_test&utm_medium=cpc&utm_campaign=style_test&utm_id=style_test" style="text-decoration: none; color:#fff; white-space: nowrap; font-weight: 400; ">#어른아이</a>
+          <a target="_blank" href="https://doosil.com/toad/search/search?q=%EC%B7%A8%ED%96%A5%EA%B3%B5%EC%9C%A0&t=tagview&tagId=1230#utm_source=style_test&utm_medium=cpc&utm_campaign=style_test&utm_id=style_test" style="text-decoration: none; color:#fff; white-space: nowrap; font-weight: 400;">#취향공유</a>
+          <a target="_blank" href="https://doosil.com/toad/search/search?q=%EC%A7%91%EC%9D%98%EA%B8%B0%EC%A4%80&t=tagview&tagId=637#utm_source=style_test&utm_medium=cpc&utm_campaign=style_test&utm_id=style_test" style="text-decoration: none; color:#fff; white-space: nowrap; font-weight: 400; ">#집의기준</a>
           <br><br><span style="font-size:1.2rem; font-weight: 300; display: block; margin: 8px;">☝🏻 위 태그를 눌러 스토리카드를 확인해보세요.</span>
         </p>
       </div>
