--- a/test_page/0_page.html
+++ b/test_page/0_page.html
@@ -45,7 +45,7 @@
         <p>ISFP</p>
       </div>
       <div id="resultImg" class="col-lg-6 col-md-6 col-sm-6 col-12 mx-auto mt-5">
-        <img src="https://kangeunseo04.io/doosil.mbti.test/img/0.png" alt="" class="img-fluid">
+        <img src="https://kangeunseo04.github.io/doosil.mbti.test/img/0.png" alt="" class="img-fluid">
       </div>
       <div class="resultDesc">
         <p>
