--- a/test_page/0_page.html
+++ b/test_page/0_page.html
@@ -45,7 +45,7 @@
         <p>ISFP</p>
       </div>
       <div id="resultImg" class="col-lg-6 col-md-6 col-sm-6 col-12 mx-auto mt-5">
-        <img src="https://github.com/kangeunseo04/doosil.mbti.test/blob/main/img/0.png" alt="" class="img-fluid">
+        <img src="../img/0.png" alt="" class="img-fluid">
       </div>
       <div class="resultDesc">
         <p>
