--- a/index.html
+++ b/index.html
@@ -36,6 +36,28 @@
     Kakao.isInitialized();
   </script>
   <title>라이프스타일 유형테스트</title>
+  <!--Maze snippet 추가 -->
+  <script>
+(function (m, a, z, e) {
+  var s, t;
+  try {
+    t = m.sessionStorage.getItem('maze-us');
+  } catch (err) {}
+
+  if (!t) {
+    t = new Date().getTime();
+    try {
+      m.sessionStorage.setItem('maze-us', t);
+    } catch (err) {}
+  }
+
+  s = a.createElement('script');
+  s.src = z + '?apiKey=' + e;
+  s.async = true;
+  a.getElementsByTagName('head')[0].appendChild(s);
+  m.mazeUniversalSnippetApiKey = e;
+})(window, document, 'https://snippet.maze.co/maze-universal-loader.js', '87f427e9-924b-4f3b-9409-f7e5daae2459');
+</script>
 </head>
 <body>
   <div class="container">
