--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <img class="img-fluid" src="img/mbti_ca.png" alt="">
         </div>
         <p class="pt-5">과연 나와 어울리는 스토리카드는 무엇일까요?</p>
-        <button id="startButton" type="button" class="style_btn mt-3" onclick="begin()">시작하기</button>
+       <button id="startButton" type="button" class="style_btn mt-3">시작하기</button>
       </div>
     </section>
   
