--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <div class="resultDesc mt-3 mb-3">
 
       </div>
-    <button id="shareButton" type="button" class="answerList mt-5">공유하기</button>
+   <button id="shareButton" type="button" class="answerList mt-5" aria-label="친구에게 결과 공유">친구한테 공유하기</button>
     </div>
     </section>
     <script src="js/data.js" charset="UTF-8"></script>
