--- a/index.html
+++ b/index.html
@@ -97,19 +97,16 @@
   
     <!--결과페이지-->
     <section id="result" class="mx-auto my-5 py-5 px-3">
-      <h1>당신의 결과는?</h1>
-      <div class="resultname">
+  <h1>당신의 결과는?</h1>
+  <div class="resultname"></div>
+  <div id="resultImg" class="col-lg-6 col-md-6 col-sm-6 col-12 mx-auto mt-5"></div>
+  <div class="resultDesc mt-3 mb-3"></div>
 
-      </div>
-      <div id="resultImg" class="col-lg-6 col-md-6 col-sm-6 col-12 mx-auto mt-5">
-
-      </div>
-      <div class="resultDesc mt-3 mb-3">
-
-      </div>
-  <button id="shareButton" type="button" class="answerList mt-5">친구한테 공유하기</button>
-    </div>
-    </section>
+  <!-- ✅ 공유하기 버튼을 이 위치에 정확히 삽입 -->
+  <button id="shareButton" type="button" class="answerList mt-5" style="display:block; margin:24px auto 0;">
+    친구한테 공유하기
+  </button>
+</section>
     <script src="js/data.js" charset="UTF-8"></script>
     <script src="js/start.js" charset="UTF-8"></script>
     <script src="js/share.js" charset="UTF-8"></script>
