--- a/index.html
+++ b/index.html
@@ -103,9 +103,7 @@
   <div class="resultDesc mt-3 mb-3"></div>
 
   <!-- ✅ 공유하기 버튼을 이 위치에 정확히 삽입 -->
-  <button id="shareButton" type="button" class="answerList mt-5" style="display:block; margin:24px auto 0;">
-    친구한테 공유하기
-  </button>
+ <button id="shareButton" class="btn-cta">친구한테 공유하기</button>
 </section>
     <script src="js/data.js" charset="UTF-8"></script>
     <script src="js/start.js" charset="UTF-8"></script>
