--- a/index.html
+++ b/index.html
@@ -96,15 +96,16 @@
     </section>
   
     <!--결과페이지-->
-    <section id="result" class="mx-auto my-5 py-5 px-3">
+   <section id="result" class="mx-auto my-5 py-5 px-3">
   <h1>당신의 결과는?</h1>
   <div class="resultname"></div>
   <div id="resultImg" class="col-lg-6 col-md-6 col-sm-6 col-12 mx-auto mt-5"></div>
   <div class="resultDesc mt-3 mb-3"></div>
 
-  <!-- ✅ 공유하기 버튼을 이 위치에 정확히 삽입 -->
- <button id="shareButton" class="btn-cta btn-ghost">친구한테 공유하기</button>
+  <!-- 공유하기 버튼을 결과 섹션 안으로 이동 -->
+  <button id="shareButton" type="button">친구한테 공유하기</button>
 </section>
+
     <script src="js/data.js" charset="UTF-8"></script>
     <script src="js/start.js" charset="UTF-8"></script>
     <script src="js/share.js" charset="UTF-8"></script>
