--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <div class="resultDesc mt-3 mb-3"></div>
 
   <!-- 공유하기 버튼을 결과 섹션 안으로 이동 -->
-  <button id="shareButton" type="button">친구한테 공유하기</button>
+ <button id="shareButton" class="btn-cta">친구한테 공유하기</button>
 </section>
 
     <script src="js/data.js" charset="UTF-8"></script>
