--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
     Kakao.init('10949e0938932b0d86e56cf4e8fb7ae5');
     Kakao.isInitialized();
   </script>
+  <!-- Kakao SDK -->
+<script src="https://t1.kakaocdn.net/kakao_js_sdk/2.3.0/kakao.min.js"
+  integrity="sha384-BmbxuvPqA1zc/FVzBcJN7UAyJxMJ/m7clCE3KcV7f9QCEtXq+0xjnyXK3k0UWz3V"
+  crossorigin="anonymous"></script>
+<script>
+  Kakao.init('1949e0938932b0d8e56cf4e8fb7ae5');
+  Kakao.isInitialized();
+</script>
+
+<!-- ✅ Maze 추적 코드 추가 -->
+<script src="https://snippet.maze.co/maze-universal-loader.js" async></script>
+
   <title>라이프스타일 유형테스트</title>
   <!--Maze snippet 추가 -->
   <script>
@@ -115,5 +127,10 @@
       </span>
     </div>
   </div>
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    window.MAZE_READY = true;
+  });
+</script>
 </body>
 </html>
