--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
     Kakao.init('10949e0938932b0d86e56cf4e8fb7ae5');
     Kakao.isInitialized();
   </script>
-  <!-- Kakao SDK -->
-<script src="https://t1.kakaocdn.net/kakao_js_sdk/2.3.0/kakao.min.js"
-  integrity="sha384-BmbxuvPqA1zc/FVzBcJN7UAyJxMJ/m7clCE3KcV7f9QCEtXq+0xjnyXK3k0UWz3V"
-  crossorigin="anonymous"></script>
+ <!-- Kakao SDK (SRI 제거) -->
+<script src="https://t1.kakaocdn.net/kakao_js_sdk/2.3.0/kakao.min.js" crossorigin="anonymous"></script>
 <script>
   Kakao.init('1949e0938932b0d8e56cf4e8fb7ae5');
   Kakao.isInitialized();
