--- a/index.html
+++ b/index.html
@@ -120,9 +120,10 @@
 
 </section>
 
-    <script src="js/share.js" charset="UTF-8"></script>
-    <script src="js/data.js" charset="UTF-8"></script>
-    <script src="js/start.js" charset="UTF-8"></script>
+ <script src="js/data.js" defer></script>
+<script src="js/start.js" defer></script>
+<script src="js/share.js" defer></script>
+
 
     <div class="col-lg-6 col-md-6 col-sm-6 col-12 mx-auto mt-5 pb-5" style="text-align: center;">
       <span>
