--- a/index.html
+++ b/index.html
@@ -119,11 +119,17 @@
 </button>
 
 </section>
+<!-- (필수) data.js 를 가장 먼저 -->
+<script src="js/data.js" defer></script>
 
- <script src="js/data.js" defer></script>
+<!-- (선택) 디버그: data.js 가 제대로 올랐는지 1회 로깅 -->
+<script defer>
+  console.log('infoList loaded?', Array.isArray(window.infoList), 'len=', window.infoList?.length);
+</script>
+
+<!-- (그 다음) start.js, 마지막 share.js -->
 <script src="js/start.js" defer></script>
 <script src="js/share.js" defer></script>
-
 
     <div class="col-lg-6 col-md-6 col-sm-6 col-12 mx-auto mt-5 pb-5" style="text-align: center;">
       <span>
