--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
   id="shareButton"
   type="button"
   class="btn-cta"
+  button id="share-button-id" class="share-button-style"
   onclick="return window.__onShareClick && window.__onShareClick(event)">
   친구한테 공유하기
 </button>
@@ -139,6 +140,10 @@
     window.MAZE_READY = true;
   });
 </script>
+  <div id="progress-bar-container" class="progress-bar-style">
+  </div>
+
+<div id="question-indicator" class="question-dot-style"></div>
 
 </body>
 </html>
