--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </span>
     </header>
     <!--메인페이지-->
-    <section id="main" class="mx-auto mt-5 py-5 px-3">
+    <section id="qna" class="mx-auto" style="display:none"></section>
         <h1>
           취향 분석으로 당신에게
           어울리는 스토리카드를 찾아보세요.
@@ -103,7 +103,7 @@
     </section>
   
     <!--결과페이지-->
-   <section id="result" class="mx-auto my-5 py-5 px-3">
+  <section id="result" class="mx-auto" style="display:none"></section>
   <h1>당신의 결과는?</h1>
   <div class="resultname"></div>
   <div id="resultImg" class="col-lg-6 col-md-6 col-sm-6 col-12 mx-auto mt-5"></div>
