--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+메인<!DOCTYPE html>
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
@@ -121,8 +121,11 @@
 
 </section>
 <!-- (필수) data.js 를 가장 먼저 -->
-<script src="js/data.js" defer></script>
-<!-- (그 다음) start.js, 마지막 share.js -->
+<s<section id="main" class="mx-auto">
+  <img src="img/___여기파일명___" class="start-img">
+  <h2>취향 분석으로 당신에게 어울리는 스토리카드를 찾아보세요.</h2>
+  <button id="startBtn">시작하기</button>
+</section>
 <script src="js/start.js?v=4" defer></script>
 <script src="js/share.js?v=2" defer></script>
 
